--- a/public/services/src/app/views/hot/works/works.html
+++ b/public/services/src/app/views/hot/works/works.html
@@ -18,7 +18,7 @@
 			<div class="div-line"></div>
 		</div>
 	</a>
-	<a href="#detail/detail/<%= type %>/<%= reply_id %>" class="workDesc">描述描述描述</a>
+	<a href="#detail/detail/<%= type %>/<%= reply_id %>" class="workDesc"><%= desc %></a>
 	<a href="#detail/detail/<%= type %>/<%= reply_id %>" class="workSectionFooter clearfix">
 		<div class="footerWrapper">
 			<div class="like">
