--- a/public/services/src/app/views/original/index/ask-index.less
+++ b/public/services/src/app/views/original/index/ask-index.less
@@ -24,6 +24,7 @@
             border-radius: 0.29rem;
             box-shadow: 0 0.04rem 0.04rem #e2e2e2;
             .workSectionHeader{
+                display: block;
                 width: 100%;
                 box-sizing: border-box;
                 padding: 0.54rem 0 0.54rem 0.36rem;
@@ -43,7 +44,7 @@
                 .nickname{
                     float: left;
                     line-height: 1.43rem;
-                    font-size: 0.71rem;
+                    font-size: 0.9rem;
                     color: #000;
                 }
             }
@@ -64,7 +65,7 @@
                 padding-left: 0.68rem;
                 line-height: 1.2rem;
                 max-height: 2.4rem;
-                font-size: 0.71rem;
+                font-size: 0.9rem;
                 color: #000;
                 background-color: #fff;
             }
