--- a/public/services/src/app/views/original/index/index.html
+++ b/public/services/src/app/views/original/index/index.html
@@ -1,10 +1,10 @@
 <div class="workSection">
-	<div class="workSectionHeader clearfix">
+	<a href="#personal/index/<%= uid %>" class="workSectionHeader clearfix">
 		<div class="portrait">
 			<img src="<%= avatar %>" alt="用户头像">
 		</div>
 		<span class="nickname"><%= nickname %></span>
-	</div>
+	</a>
 	<a href="#original/detail/<%= ask_id %>" class="workPic">
 		<img src="<%= ask_image_url %>" alt="作品" class="old">
 	</a>
