--- a/public/services/src/app/views/activity/header/header.html
+++ b/public/services/src/app/views/activity/header/header.html
@@ -7,11 +7,13 @@
 			毕业照创意大比拼
 		</div>
 		<div class="activity-rule">
+			<!-- <h3>活动规则</h3> -->
 			<ol class="rule">
-				<li>【规则】只要是毕业照就可以，关键是好玩有创意~</li>
-				<li>【参与方式】在本活动页面上传照片即可参与</li>
-				<li>【福利】热门top1的作品将获得宋钟基5.28深圳粉丝见面会门票两张！！top2奖金200元</li>
-				<li>（PS:如何上热门？点赞数和评论数是重要的参考指标！）</li>
+				<li>只要是毕业照就可以，关键是好玩有创意~</li>
+				<li>毕业照的点赞数和评论数是上热门的评分指标</li>
+				<li>热门top1：宋钟基深圳粉丝见面会门票两张</li>
+				<li>热门top2：现金200元</li>
+				<li>参与方式：点击上传照片即可参与</li>
 			</ol>
 			<div class="deadline">
 				截止日期：2016.05.27
@@ -19,20 +21,20 @@
 		</div>
 	</div>
 	<ul class="tap clearfix">
-		<li class="hot activity">
+		<li class="hot activity works-tap" data-type="hot">
 			<div class="hot-tap clearfix">
 				<i class="hot-icon"></i>
 				<span>热门</span>
 			</div>
 		</li>
-		<li class="new">
+		<li class="new works-tap"  data-type="new">
 			<div class="new-tap clearfix">
 				<i class="new-icon"></i>
 				<span>最新</span>
 			</div>
 		</li>
 	</ul>
-	<a href="" class="upload">
+	<a href="#upload/reply/0/1010" class="upload">
 		<img src="/images/upload1.png" alt="">
 	</a>
 </div>
