--- a/public/services/css/main.css
+++ b/public/services/css/main.css
@@ -1126,6 +1126,7 @@ body {
 .activity-header {
   margin-top: -0.71rem;
   background-color: #fff;
+  border-bottom: 0.71rem solid #f7f7f7;
 }
 .activity-header .banner {
   overflow: hidden;
@@ -1151,7 +1152,7 @@ body {
   border-bottom: 1px solid #B9B8BD;
 }
 .activity-header .activity-rule {
-  margin-bottom: 2.32rem;
+  margin-bottom: 0.71rem;
 }
 .activity-header .activity-rule h3 {
   color: #313040;
@@ -1163,16 +1164,18 @@ body {
   padding-bottom: 0.71rem;
 }
 .activity-header .activity-rule .rule li {
+  padding-left: 1rem;
   color: #313040;
   font-size: 0.86rem;
   line-height: 1.18rem;
   margin-bottom: 0.64rem;
+  border-left: 2px solid #f9d161;
 }
-.activity-header .activity-rule .rule li:nth-child(4) {
+.activity-header .activity-rule .rule li:nth-child(5) {
   margin-bottom: 0;
 }
 .activity-header .activity-rule .deadline {
-  font-size: 1rem;
+  font-size: 0.8rem;
   color: #313040;
   line-height: 1.43rem;
 }
@@ -1231,13 +1234,16 @@ body {
 .activity-header .tap .hot-tap {
   display: inline-block;
   padding-bottom: 0.2rem;
+  border-bottom: 2px solid #fff;
 }
 .activity-header .tap .new-tap {
   display: inline-block;
   padding-bottom: 0.2rem;
+  border-bottom: 2px solid #fff;
 }
 .activity-header .upload {
   position: fixed;
+  z-index: 99;
   bottom: 0.54rem;
   left: 35.5%;
   width: 31%;
@@ -1909,71 +1915,89 @@ body {
   border-radius: 3.57rem;
 }
 
-.header-logo {
+.personal-grid {
+  background-color: #f7f7f7;
+}
+.main-ask-section {
+  width: 47%;
+  margin: 0 1.5% 3%;
+}
+.main-ask-section .ask-section {
+  float: left;
   width: 100%;
-  height: 3.57rem;
   background-color: #fff;
-  /*border-bottom: 0.71rem solid #f7f7f7;*/
+  border-radius: 0.21rem;
+  box-shadow: 0 0.04rem  0 #e2e2e2;
 }
-.header-portrait {
-  margin-top: -0.71rem;
+.main-ask-section .ask-section .ask-section-main {
+  display: block;
+}
+.main-ask-section .ask-section .ask-section-main .workPic {
+  overflow: hidden;
+  max-height: 30rem;
+  margin-bottom: 0.71rem;
+}
+.main-ask-section .ask-section .ask-section-main .workPic img {
+  display: block;
   width: 100%;
-  height: 9.32rem;
-  padding-top: 1.93rem;
+}
+.main-ask-section .ask-section .ask-section-main .desc {
+  overflow: hidden;
+  display: block;
+  width: 94%;
+  max-height: 2.6rem;
+  line-height: 1.3rem;
+  padding: 0 3%;
+  font-size: 0.9rem;
+  color: rgba(0, 0, 0, 0.8);
+  border-bottom: 0.12rem dotted rgba(0, 0, 0, 0.49);
+}
+.main-ask-section .ask-section .ask-section-bottom {
+  width: 100%;
+  height: 2.5rem;
   box-sizing: border-box;
-  background-color: #f9d161;
-}
-.header-portrait .user-info {
-  /*width: 4.29rem;*/
-  /*margin: 0 auto;*/
-  /*text-align: center;*/
-}
-.header-portrait .user-info .portrait {
-  margin: 0 auto;
-  margin-bottom: 0.68rem;
-  width: 3.71rem;
-  height: 3.71rem;
-  border-radius: 100%;
+  padding: 0.64rem 0.64rem 0 0.75rem;
+  border-radius: 0.18rem;
+  line-height: 0.8rem;
   overflow: hidden;
 }
-.header-portrait .user-info .portrait img {
-  display: block;
-  width: 100%;
-  height: 100%;
+.main-ask-section .ask-section .ask-section-bottom .help {
+  float: left;
 }
-.header-portrait .user-info .nickname {
-  display: block;
-  width: 100%;
-  text-align: center;
-  font-size: 1.07rem;
-  color: rgba(0, 0, 0, 0.8);
-}
-.header-nav {
-  display: block;
-  width: 100%;
-  height: 2.71rem;
-  background-color: #fff;
-  text-align: center;
-  border-bottom: 0.71rem solid #f7f7f7;
-}
-.header-nav .nav-item {
+.main-ask-section .ask-section .ask-section-bottom .help .icon-help {
   display: inline-block;
-  width: 33.3%;
-  height: 2.21rem;
-  text-align: center;
-  line-height: 2.71rem;
-  font-size: 0.86rem;
+  margin-right: 0.68rem;
+  vertical-align: middle;
+  width: 0.93rem;
+  height: 0.89rem;
+  background: url(/images/icon-help.png) no-repeat 0 0;
+  background-size: 100%;
+}
+.main-ask-section .ask-section .ask-section-bottom .help .text-help {
+  display: inline-block;
+  vertical-align: middle;
+  font-size: 0.9rem;
+  line-height: 0.89rem;
   color: rgba(0, 0, 0, 0.49);
 }
-.header-nav .nav-item a {
-  display: inline-block;
-  width: 3.93rem;
-  height: 2.5rem;
+.main-ask-section .ask-section .ask-section-bottom .work {
+  float: right;
 }
-.header-nav .active a {
-  font-size: 0.86rem;
-  color: rgba(0, 0, 0, 0.8);
-  border-bottom: 0.21rem solid #f9d161;
+.main-ask-section .ask-section .ask-section-bottom .work .icon-work {
+  display: inline-block;
+  vertical-align: middle;
+  margin-right: 0.68rem;
+  width: 0.93rem;
+  height: 0.89rem;
+  background: url(/images/icon-work.png) no-repeat 0 0;
+  background-size: 100%;
+}
+.main-ask-section .ask-section .ask-section-bottom .work .text-work {
+  display: inline-block;
+  vertical-align: middle;
+  font-size: 0.9rem;
+  line-height: 0.89rem;
+  color: rgba(0, 0, 0, 0.49);
 }
 
 .main-processing {
@@ -2116,27 +2140,27 @@ body {
   margin: 0 1.5% 3%;
   background-color: #fff;
 }
-.myWork-pageSection .workSection {
+.workSection {
   display: block;
   width: 100%;
 }
-.myWork-pageSection .workSection .workPic {
+.workSection .workPic {
   width: 100%;
 }
-.myWork-pageSection .workSection .workSectionFooter {
+.workSection .workSectionFooter {
   background-color: #fff;
 }
-.myWork-pageSection .workSection .workSectionFooter .footerWrapper {
+.workSection .workSectionFooter .footerWrapper {
   float: right;
   padding: 0.5rem 0;
 }
-.myWork-pageSection .workSection .workSectionFooter .footerWrapper .like {
+.workSection .workSectionFooter .footerWrapper .like {
   float: left;
   line-height: 0.89rem;
   margin-left: 0.93rem;
   cursor: pointer;
 }
-.myWork-pageSection .workSection .workSectionFooter .footerWrapper .like .icon-like {
+.workSection .workSectionFooter .footerWrapper .like .icon-like {
   display: block;
   float: left;
   width: 1.1rem;
@@ -2144,11 +2168,11 @@ body {
   background: url(/images/icon-like-deepCol.png) no-repeat 0 0;
   background-size: 100%;
 }
-.myWork-pageSection .workSection .workSectionFooter .footerWrapper .like .icon-pressed-like {
+.workSection .workSectionFooter .footerWrapper .like .icon-pressed-like {
   background: url(/images/like.png) no-repeat 0 0;
   background-size: 100%;
 }
-.myWork-pageSection .workSection .workSectionFooter .footerWrapper .like .text-like {
+.workSection .workSectionFooter .footerWrapper .like .text-like {
   display: block;
   float: left;
   height: 0.89rem;
@@ -2158,13 +2182,13 @@ body {
   color: #000;
   opacity: 0.3;
 }
-.myWork-pageSection .workSection .workSectionFooter .footerWrapper .comment {
+.workSection .workSectionFooter .footerWrapper .comment {
   float: left;
   line-height: 0.89rem;
   margin-left: 0.93rem;
   cursor: pointer;
 }
-.myWork-pageSection .workSection .workSectionFooter .footerWrapper .comment .icon-comment {
+.workSection .workSectionFooter .footerWrapper .comment .icon-comment {
   display: block;
   float: left;
   width: 1rem;
@@ -2172,7 +2196,7 @@ body {
   background: url(/images/icon-comment.png) no-repeat 0 0;
   background-size: 100%;
 }
-.myWork-pageSection .workSection .workSectionFooter .footerWrapper .comment .text-comment {
+.workSection .workSectionFooter .footerWrapper .comment .text-comment {
   display: block;
   float: left;
   height: 0.89rem;
@@ -2182,6 +2206,73 @@ body {
   font-family: "Helvetica-Light", "sans-serif";
   color: #000;
   opacity: 0.3;
+}
+
+.header-logo {
+  width: 100%;
+  height: 3.57rem;
+  background-color: #fff;
+  /*border-bottom: 0.71rem solid #f7f7f7;*/
+}
+.header-portrait {
+  margin-top: -0.71rem;
+  width: 100%;
+  height: 9.32rem;
+  padding-top: 1.93rem;
+  box-sizing: border-box;
+  background-color: #f9d161;
+}
+.header-portrait .user-info {
+  /*width: 4.29rem;*/
+  /*margin: 0 auto;*/
+  /*text-align: center;*/
+}
+.header-portrait .user-info .portrait {
+  margin: 0 auto;
+  margin-bottom: 0.68rem;
+  width: 3.71rem;
+  height: 3.71rem;
+  border-radius: 100%;
+  overflow: hidden;
+}
+.header-portrait .user-info .portrait img {
+  display: block;
+  width: 100%;
+  height: 100%;
+}
+.header-portrait .user-info .nickname {
+  display: block;
+  width: 100%;
+  text-align: center;
+  font-size: 1.07rem;
+  color: rgba(0, 0, 0, 0.8);
+}
+.header-nav {
+  display: block;
+  width: 100%;
+  height: 2.71rem;
+  background-color: #fff;
+  text-align: center;
+  border-bottom: 0.71rem solid #f7f7f7;
+}
+.header-nav .nav-item {
+  display: inline-block;
+  width: 33.3%;
+  height: 2.21rem;
+  text-align: center;
+  line-height: 2.71rem;
+  font-size: 0.86rem;
+  color: rgba(0, 0, 0, 0.49);
+}
+.header-nav .nav-item a {
+  display: inline-block;
+  width: 3.93rem;
+  height: 2.5rem;
+}
+.header-nav .active a {
+  font-size: 0.86rem;
+  color: rgba(0, 0, 0, 0.8);
+  border-bottom: 0.21rem solid #f9d161;
 }
 
 
@@ -2398,89 +2489,4 @@ body {
   display: block;
   width: 100%;
   margin: 1.07rem 0;
-}
-
-.personal-grid {
-  background-color: #f7f7f7;
-}
-.main-ask-section {
-  width: 47%;
-  margin: 0 1.5% 3%;
-}
-.main-ask-section .ask-section {
-  float: left;
-  width: 100%;
-  background-color: #fff;
-  border-radius: 0.21rem;
-  box-shadow: 0 0.04rem  0 #e2e2e2;
-}
-.main-ask-section .ask-section .ask-section-main {
-  display: block;
-}
-.main-ask-section .ask-section .ask-section-main .workPic {
-  overflow: hidden;
-  max-height: 30rem;
-  margin-bottom: 0.71rem;
-}
-.main-ask-section .ask-section .ask-section-main .workPic img {
-  display: block;
-  width: 100%;
-}
-.main-ask-section .ask-section .ask-section-main .desc {
-  overflow: hidden;
-  display: block;
-  width: 94%;
-  max-height: 2.6rem;
-  line-height: 1.3rem;
-  padding: 0 3%;
-  font-size: 0.9rem;
-  color: rgba(0, 0, 0, 0.8);
-  border-bottom: 0.12rem dotted rgba(0, 0, 0, 0.49);
-}
-.main-ask-section .ask-section .ask-section-bottom {
-  width: 100%;
-  height: 2.5rem;
-  box-sizing: border-box;
-  padding: 0.64rem 0.64rem 0 0.75rem;
-  border-radius: 0.18rem;
-  line-height: 0.8rem;
-  overflow: hidden;
-}
-.main-ask-section .ask-section .ask-section-bottom .help {
-  float: left;
-}
-.main-ask-section .ask-section .ask-section-bottom .help .icon-help {
-  display: inline-block;
-  margin-right: 0.68rem;
-  vertical-align: middle;
-  width: 0.93rem;
-  height: 0.89rem;
-  background: url(/images/icon-help.png) no-repeat 0 0;
-  background-size: 100%;
-}
-.main-ask-section .ask-section .ask-section-bottom .help .text-help {
-  display: inline-block;
-  vertical-align: middle;
-  font-size: 0.9rem;
-  line-height: 0.89rem;
-  color: rgba(0, 0, 0, 0.49);
-}
-.main-ask-section .ask-section .ask-section-bottom .work {
-  float: right;
-}
-.main-ask-section .ask-section .ask-section-bottom .work .icon-work {
-  display: inline-block;
-  vertical-align: middle;
-  margin-right: 0.68rem;
-  width: 0.93rem;
-  height: 0.89rem;
-  background: url(/images/icon-work.png) no-repeat 0 0;
-  background-size: 100%;
-}
-.main-ask-section .ask-section .ask-section-bottom .work .text-work {
-  display: inline-block;
-  vertical-align: middle;
-  font-size: 0.9rem;
-  line-height: 0.89rem;
-  color: rgba(0, 0, 0, 0.49);
 }
