--- a/public/services/src/app/views/activity/header/activity-header.less
+++ b/public/services/src/app/views/activity/header/activity-header.less
@@ -1,6 +1,7 @@
 .activity-header {
 	margin-top: -0.71rem;
 	background-color: #fff;
+	border-bottom: 0.71rem solid #f7f7f7;
 	.banner {
 		overflow: hidden;
 		height: 12.5rem;
@@ -25,7 +26,7 @@
 		}
 	}
 	.activity-rule {
-		margin-bottom: 2.32rem;
+		margin-bottom: 0.71rem;
 		h3 {
 			color: #313040;
 			font-size: 1rem;
@@ -35,17 +36,19 @@
 		.rule {
 			padding-bottom: 0.71rem;
 			li {
+				padding-left: 1rem;
 				color: #313040;
 				font-size: 0.86rem;
 				line-height: 1.18rem;
 				margin-bottom: 0.64rem;
+				border-left: 2px solid #f9d161;
 			}
-			li:nth-child(4) {
+			li:nth-child(5) {
 				margin-bottom: 0;
 			}
 		}
 		.deadline {
-			font-size: 1rem;
+			font-size: 0.8rem;
 			color: #313040;
 			line-height: 1.43rem;
 		}
@@ -106,14 +109,17 @@
 		.hot-tap {
 			display: inline-block;
 			padding-bottom: 0.2rem;
+			border-bottom: 2px solid #fff;
 		}		
 		.new-tap {
 			display: inline-block;
 			padding-bottom: 0.2rem;
+			border-bottom: 2px solid #fff;
 		}
 	}
 	.upload {
 		position: fixed;
+		z-index: 99;
 		bottom: 0.54rem;
 		left: 35.5%;
 		width: 31%;
