--- a/public/services/src/app/views/activity/works/works.html
+++ b/public/services/src/app/views/activity/works/works.html
@@ -1,4 +1,4 @@
-<a href="#original/detail/<%= ask_id %>" class="workSection">
+<a href="#detail/detail/<%= type %>/<%= reply_id %>" class="workSection">
 	<img src="<%= image_url %>" alt="作品" class="workPic">
 	<div class="workSectionFooter clearfix">
 		<div class="footerWrapper">
