--- a/public/services/src/app/views/original/index/ask-index.less
+++ b/public/services/src/app/views/original/index/ask-index.less
@@ -10,10 +10,11 @@
 .picBoxAni {
     z-index: 999;
     top: 0.64rem !important;
-    left: 86% !important;
+    left: 86.1% !important;
     width: 2.29rem;
     height: 2.29rem;
     opacity: 1;
+    border: 0.08rem solid #a9a9a9;
 }
     .index-ask-pageSection{
         width: 100%;
