--- a/public/services/src/app/views/activity/works/works.html
+++ b/public/services/src/app/views/activity/works/works.html
@@ -1,3 +1,9 @@
+<a href="#personal/index/<%= uid %>" class="workSectionHeader clearfix">
+	<div class="portrait">
+		<img src="<%= avatar %>" alt="用户头像">
+	</div>
+	<span class="nickname"><%= nickname %></span>
+</a>
 <a href="#detail/detail/<%= type %>/<%= reply_id %>" class="workSection">
 	<img src="<%= image_url %>" alt="作品" class="workPic">
 	<div class="workSectionFooter clearfix">
