--- a/public/services/css/main.css
+++ b/public/services/css/main.css
@@ -1292,6 +1292,31 @@ body {
   vertical-align: middle;
 }
 
+.workSectionHeader {
+  display: block;
+  width: 100%;
+  box-sizing: border-box;
+  padding: 0.54rem 0 0.54rem 0.36rem;
+  background-color: #fff;
+}
+.workSectionHeader .portrait {
+  float: left;
+  width: 1.43rem;
+  height: 1.43rem;
+  margin-right: 0.29rem;
+  border-radius: 100%;
+  overflow: hidden;
+}
+.workSectionHeader .portrait img {
+  display: block;
+  width: 100%;
+}
+.workSectionHeader .nickname {
+  float: left;
+  line-height: 1.43rem;
+  font-size: 0.9rem;
+  color: #000;
+}
 .hot-pageSection {
   width: 100%;
   background-color: #f7f7f7;
@@ -1302,31 +1327,6 @@ body {
   border-radius: 0.29rem;
   box-shadow: 0 0.04rem 0.04rem #e2e2e2;
   overflow: hidden;
-}
-.hot-pageSection .workSection .workSectionHeader {
-  display: block;
-  width: 100%;
-  box-sizing: border-box;
-  padding: 0.54rem 0 0.54rem 0.36rem;
-  background-color: #fff;
-}
-.hot-pageSection .workSection .workSectionHeader .portrait {
-  float: left;
-  width: 1.43rem;
-  height: 1.43rem;
-  margin-right: 0.29rem;
-  border-radius: 100%;
-  overflow: hidden;
-}
-.hot-pageSection .workSection .workSectionHeader .portrait img {
-  display: block;
-  width: 100%;
-}
-.hot-pageSection .workSection .workSectionHeader .nickname {
-  float: left;
-  line-height: 1.43rem;
-  font-size: 0.9rem;
-  color: #000;
 }
 .hot-pageSection .workSection .workPic {
   overflow: hidden;
@@ -1452,6 +1452,338 @@ body {
   font-family: "Helvetica-Light", "sans-serif";
   color: #000;
   opacity: 0.3;
+}
+
+/*卡片出现动画*/
+.aniFadeInUp {
+  -webkit-animation-name: aniFadeInUp;
+  animation-name: aniFadeInUp;
+  -webkit-animation-duration: 0.5s;
+  animation-duration: 0.5s;
+  -webkit-animation-fill-mode: both;
+  animation-fill-mode: both;
+}
+@-webkit-keyframes aniFadeInUp {
+  0% {
+    opacity: 0.3;
+    -webkit-transform: translate3d(0, 20%, 0);
+    transform: translate3d(0, 20%, 0);
+  }
+  90% {
+    opacity: 0.7;
+    -webkit-transform: translate3d(0, -3%, 0);
+    transform: translate3d(0, -3%, 0);
+  }
+  100% {
+    opacity: 1;
+    -webkit-transform: none;
+    transform: none;
+  }
+}
+@keyframes aniFadeInUp {
+  0% {
+    opacity: 0.3;
+    -webkit-transform: translate3d(0, 20%, 0);
+    transform: translate3d(0, 20%, 0);
+  }
+  90% {
+    opacity: 0.7;
+    -webkit-transform: translate3d(0, -3%, 0);
+    transform: translate3d(0, -5%, 0);
+  }
+  100% {
+    opacity: 1;
+    -webkit-transform: none;
+    transform: none;
+  }
+}
+/*消失动画*/
+.aniFadeOut {
+  -webkit-animation-name: aniFadeOut;
+  animation-name: aniFadeOut;
+  -webkit-animation-duration: 1s;
+  animation-duration: 0.5s;
+  -webkit-animation-fill-mode: both;
+  animation-fill-mode: both;
+}
+@-webkit-keyframes aniFadeOut {
+  from {
+    opacity: 1;
+    -webkit-transform: none;
+    transform: none;
+  }
+  to {
+    opacity: 0;
+    -webkit-transform: translate3d(0, -20%, 0);
+    transform: translate3d(0, -20%, 0);
+  }
+}
+@keyframes aniFadeOut {
+  from {
+    opacity: 1;
+    -webkit-transform: none;
+    transform: none;
+  }
+  to {
+    opacity: 0;
+    -webkit-transform: translate3d(0, -20%, 0);
+    transform: translate3d(0, -20%, 0);
+  }
+}
+.footer {
+  width: 100%;
+}
+.footer .body-loading {
+  margin: 0 auto;
+}
+.detail-padding {
+  /*padding-bottom: 3rem;*/
+}
+.post-workCount {
+  width: 100%;
+  position: relative;
+  padding: 1.07rem 0 1.25rem 0;
+  text-align: center;
+}
+.post-workCount .workCount-bg {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  z-index: -2;
+  background-color: #F7F7F7;
+}
+.post-workCount .text-workCount {
+  color: #000;
+  font-size: 0.86rem;
+  opacity: 0.8;
+  line-height: 1rem;
+  height: 1rem;
+}
+.post-workCount .text-workCount em {
+  display: inline-block;
+  line-height: 1rem;
+  height: 1rem;
+  font-size: 1.07rem;
+  margin: 0 .3rem;
+}
+.artWorkShow {
+  /*border-bottom: 1.43rem solid #F7F7F7;*/
+}
+.commentDetail {
+  width: 94%;
+  margin: 0 3%;
+  border-bottom: 1px solid #eaeaea;
+}
+.commentDetail .commentLine {
+  padding: 0.86rem 0 0.86rem 0;
+  /*border-bottom: 1px solid #eaeaea;*/
+}
+.commentDetail .commentLine .commentHead .userName {
+  float: left;
+  color: #000;
+  font-size: 0.93rem;
+  font-family: "PingFangSC-Regular", "sans-serif";
+}
+.commentDetail .commentLine .commentHead .commentOption {
+  float: right;
+}
+.commentDetail .commentLine .commentHead .commentOption .optionItem {
+  font-family: "PingFangSC-Light", "sans-serif";
+  font-size: 0.79rem;
+  cursor: pointer;
+}
+.commentDetail .commentLine .commentHead .commentOption .reply {
+  color: #fe5401;
+  margin-right: 0.5rem;
+}
+.commentDetail .commentLine .commentHead .commentOption .delete {
+  color: #000;
+  opacity: 0.6;
+  margin-left: 1.32rem;
+  margin-right: 0.5rem;
+}
+.commentDetail .commentLine .commentText {
+  margin-top: 0.46rem;
+  display: block;
+  width: 100%;
+  font-size: 0.93rem;
+  font-family: "PingFangSC-Regular", "sans-serif";
+  opacity: 0.6;
+}
+.commentDetail .commentReply {
+  padding-top: 1.14rem;
+}
+.commentDetail .commentReply .userNameGroup {
+  float: left;
+  line-height: 1.43rem;
+  font-size: 0.93rem;
+}
+.commentDetail .commentReply .userNameGroup .userName-reply {
+  float: left;
+  /*width: 1.86rem;*/
+  white-space: nowrap;
+}
+.commentDetail .commentReply .userNameGroup em {
+  float: left;
+  margin: 0 .25rem;
+  font-family: "PingFangSC-Regular", "sans-serif";
+  opacity: 0.6;
+}
+.commentDetail .commentReply .userNameGroup .userName-beReplied {
+  float: left;
+  /*width: 3.71rem;*/
+}
+.viewMore {
+  display: block;
+  width: 100%;
+  font-size: 0.86rem;
+  opacity: 0.4;
+  font-family: "PingFangSC-Light", "sans-serif";
+  color: #000;
+  text-align: center;
+  height: 2.6rem;
+  line-height: 2.6rem;
+}
+.post-footer {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  box-shadow: 0 -0.05rem 0.16rem 0.16rem rgba(238, 238, 238, 0.5);
+  text-align: center;
+  letter-spacing: 0.04rem;
+  font-size: 1rem;
+  font-family: "PingFangSC-Regular";
+  line-height: 3.14rem;
+}
+.post-footer .footerHelp {
+  float: left;
+  width: 50%;
+  height: 3.14rem;
+  color: #000;
+  background-color: #f9d161;
+}
+.post-footer .footerHelp .icon-help {
+  display: inline-block;
+  vertical-align: middle;
+  margin-right: 0.3rem;
+  width: 1.25rem;
+  height: 1.25rem;
+  background: url(/images/icon-help.png) no-repeat 0 0;
+  background-size: 100%;
+}
+.post-footer .footerUpload {
+  float: left;
+  width: 50%;
+  height: 3.14rem;
+  background-color: #151515;
+  color: #fff;
+}
+.post-footer .footerUpload .icon-help {
+  display: inline-block;
+  vertical-align: middle;
+  margin-right: 0.5rem;
+  width: 1rem;
+  height: 1.4rem;
+  background: url(/images/shang.png) no-repeat 0 0;
+  background-size: 100%;
+}
+.window-fix {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 998;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+.window-fix .window {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin: -7.88rem 0 0 -50%;
+  width: 100%;
+  height: 15.57rem;
+  background-color: #fff;
+  border-radius: 0.36rem;
+  box-shadow: 0 0.14rem 0.29rem 0 rgba(0, 0, 0, 0.2);
+  overflow: hidden;
+  opacity: 1;
+}
+.window-fix .window .windowHeader {
+  margin-top: 0.71rem;
+  margin-left: 0.89rem;
+  font-size: 0.93rem;
+  font-family: "PingFangSC-Regular", "sans-serif";
+  color: #000;
+  opacity: 0.4;
+  cursor: default;
+}
+.window-fix .window .windowHeader .replyTo {
+  margin-left: 0.36rem;
+}
+.window-fix .window .windowContent {
+  display: block;
+  width: 95%;
+  box-sizing: border-box;
+  margin: 0.71rem auto 0;
+  /*margin-left: 0.89rem;*/
+  background-color: #f0f0f0;
+  border-radius: 0.21rem;
+  overflow-y: hidden;
+  font-family: "PingFangSC-Regular", "sans-serif";
+  font-size: 1rem;
+}
+.window-fix .window .windowOperation {
+  float: right;
+  margin-top: 0.71rem;
+  margin-right: 0.89rem;
+}
+.window-fix .window .windowOperation .cancel {
+  margin-right: 2rem;
+  font-family: "PingFangSC-Regular", "sans-serif";
+  font-size: 0.93rem;
+  color: #333;
+  opacity: 0.5;
+  background-color: transparent;
+  cursor: pointer;
+}
+.window-fix .window .windowOperation .send {
+  width: 6.07rem;
+  height: 2rem;
+  border-radius: 1.43rem;
+  background-color: #fef22f;
+  font-family: "PingFangSC-Regular", "sans-serif";
+  font-size: 0.86rem;
+  color: #2b2b2b;
+  cursor: pointer;
+  text-align: center;
+}
+.share-mask {
+  position: fixed;
+  z-index: 999999;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.7);
+}
+.share-mask .mask-p {
+  padding-top: 3.57rem;
+  text-align: center;
+  font-size: 1.21rem;
+  color: #fff;
+  line-height: 1.93rem;
+}
+.share-mask .mask-icon {
+  position: absolute;
+  top: 1.57rem;
+  right: 2.29rem;
+  width: 2.82rem;
+  height: 2.57rem;
+  background: url("http://7u2spr.com2.z0.glb.qiniucdn.com/movie/share.png") center no-repeat;
+  background-size: contain;
 }
 
 .picBox {
@@ -1944,6 +2276,7 @@ body {
   opacity: 0.3;
 }
 
+
 .uploadHeader {
   width: 100%;
   height: 3.93rem;
@@ -2157,337 +2490,4 @@ body {
   display: block;
   width: 100%;
   margin: 1.07rem 0;
-}
-
-
-/*卡片出现动画*/
-.aniFadeInUp {
-  -webkit-animation-name: aniFadeInUp;
-  animation-name: aniFadeInUp;
-  -webkit-animation-duration: 0.5s;
-  animation-duration: 0.5s;
-  -webkit-animation-fill-mode: both;
-  animation-fill-mode: both;
-}
-@-webkit-keyframes aniFadeInUp {
-  0% {
-    opacity: 0.3;
-    -webkit-transform: translate3d(0, 20%, 0);
-    transform: translate3d(0, 20%, 0);
-  }
-  90% {
-    opacity: 0.7;
-    -webkit-transform: translate3d(0, -3%, 0);
-    transform: translate3d(0, -3%, 0);
-  }
-  100% {
-    opacity: 1;
-    -webkit-transform: none;
-    transform: none;
-  }
-}
-@keyframes aniFadeInUp {
-  0% {
-    opacity: 0.3;
-    -webkit-transform: translate3d(0, 20%, 0);
-    transform: translate3d(0, 20%, 0);
-  }
-  90% {
-    opacity: 0.7;
-    -webkit-transform: translate3d(0, -3%, 0);
-    transform: translate3d(0, -5%, 0);
-  }
-  100% {
-    opacity: 1;
-    -webkit-transform: none;
-    transform: none;
-  }
-}
-/*消失动画*/
-.aniFadeOut {
-  -webkit-animation-name: aniFadeOut;
-  animation-name: aniFadeOut;
-  -webkit-animation-duration: 1s;
-  animation-duration: 0.5s;
-  -webkit-animation-fill-mode: both;
-  animation-fill-mode: both;
-}
-@-webkit-keyframes aniFadeOut {
-  from {
-    opacity: 1;
-    -webkit-transform: none;
-    transform: none;
-  }
-  to {
-    opacity: 0;
-    -webkit-transform: translate3d(0, -20%, 0);
-    transform: translate3d(0, -20%, 0);
-  }
-}
-@keyframes aniFadeOut {
-  from {
-    opacity: 1;
-    -webkit-transform: none;
-    transform: none;
-  }
-  to {
-    opacity: 0;
-    -webkit-transform: translate3d(0, -20%, 0);
-    transform: translate3d(0, -20%, 0);
-  }
-}
-.footer {
-  width: 100%;
-}
-.footer .body-loading {
-  margin: 0 auto;
-}
-.detail-padding {
-  /*padding-bottom: 3rem;*/
-}
-.post-workCount {
-  width: 100%;
-  position: relative;
-  padding: 1.07rem 0 1.25rem 0;
-  text-align: center;
-}
-.post-workCount .workCount-bg {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
-  z-index: -2;
-  background-color: #F7F7F7;
-}
-.post-workCount .text-workCount {
-  color: #000;
-  font-size: 0.86rem;
-  opacity: 0.8;
-  line-height: 1rem;
-  height: 1rem;
-}
-.post-workCount .text-workCount em {
-  display: inline-block;
-  line-height: 1rem;
-  height: 1rem;
-  font-size: 1.07rem;
-  margin: 0 .3rem;
-}
-.artWorkShow {
-  /*border-bottom: 1.43rem solid #F7F7F7;*/
-}
-.commentDetail {
-  width: 94%;
-  margin: 0 3%;
-  border-bottom: 1px solid #eaeaea;
-}
-.commentDetail .commentLine {
-  padding: 0.86rem 0 0.86rem 0;
-  /*border-bottom: 1px solid #eaeaea;*/
-}
-.commentDetail .commentLine .commentHead .userName {
-  float: left;
-  color: #000;
-  font-size: 0.93rem;
-  font-family: "PingFangSC-Regular", "sans-serif";
-}
-.commentDetail .commentLine .commentHead .commentOption {
-  float: right;
-}
-.commentDetail .commentLine .commentHead .commentOption .optionItem {
-  font-family: "PingFangSC-Light", "sans-serif";
-  font-size: 0.79rem;
-  cursor: pointer;
-}
-.commentDetail .commentLine .commentHead .commentOption .reply {
-  color: #fe5401;
-  margin-right: 0.5rem;
-}
-.commentDetail .commentLine .commentHead .commentOption .delete {
-  color: #000;
-  opacity: 0.6;
-  margin-left: 1.32rem;
-  margin-right: 0.5rem;
-}
-.commentDetail .commentLine .commentText {
-  margin-top: 0.46rem;
-  display: block;
-  width: 100%;
-  font-size: 0.93rem;
-  font-family: "PingFangSC-Regular", "sans-serif";
-  opacity: 0.6;
-}
-.commentDetail .commentReply {
-  padding-top: 1.14rem;
-}
-.commentDetail .commentReply .userNameGroup {
-  float: left;
-  line-height: 1.43rem;
-  font-size: 0.93rem;
-}
-.commentDetail .commentReply .userNameGroup .userName-reply {
-  float: left;
-  /*width: 1.86rem;*/
-  white-space: nowrap;
-}
-.commentDetail .commentReply .userNameGroup em {
-  float: left;
-  margin: 0 .25rem;
-  font-family: "PingFangSC-Regular", "sans-serif";
-  opacity: 0.6;
-}
-.commentDetail .commentReply .userNameGroup .userName-beReplied {
-  float: left;
-  /*width: 3.71rem;*/
-}
-.viewMore {
-  display: block;
-  width: 100%;
-  font-size: 0.86rem;
-  opacity: 0.4;
-  font-family: "PingFangSC-Light", "sans-serif";
-  color: #000;
-  text-align: center;
-  height: 2.6rem;
-  line-height: 2.6rem;
-}
-.post-footer {
-  position: fixed;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  box-shadow: 0 -0.05rem 0.16rem 0.16rem rgba(238, 238, 238, 0.5);
-  text-align: center;
-  letter-spacing: 0.04rem;
-  font-size: 1rem;
-  font-family: "PingFangSC-Regular";
-  line-height: 3.14rem;
-}
-.post-footer .footerHelp {
-  float: left;
-  width: 50%;
-  height: 3.14rem;
-  color: #000;
-  background-color: #f9d161;
-}
-.post-footer .footerHelp .icon-help {
-  display: inline-block;
-  vertical-align: middle;
-  margin-right: 0.3rem;
-  width: 1.25rem;
-  height: 1.25rem;
-  background: url(/images/icon-help.png) no-repeat 0 0;
-  background-size: 100%;
-}
-.post-footer .footerUpload {
-  float: left;
-  width: 50%;
-  height: 3.14rem;
-  background-color: #151515;
-  color: #fff;
-}
-.post-footer .footerUpload .icon-help {
-  display: inline-block;
-  vertical-align: middle;
-  margin-right: 0.5rem;
-  width: 1rem;
-  height: 1.4rem;
-  background: url(/images/shang.png) no-repeat 0 0;
-  background-size: 100%;
-}
-.window-fix {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  z-index: 998;
-  background-color: rgba(0, 0, 0, 0.5);
-}
-.window-fix .window {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  margin: -7.88rem 0 0 -50%;
-  width: 100%;
-  height: 15.57rem;
-  background-color: #fff;
-  border-radius: 0.36rem;
-  box-shadow: 0 0.14rem 0.29rem 0 rgba(0, 0, 0, 0.2);
-  overflow: hidden;
-  opacity: 1;
-}
-.window-fix .window .windowHeader {
-  margin-top: 0.71rem;
-  margin-left: 0.89rem;
-  font-size: 0.93rem;
-  font-family: "PingFangSC-Regular", "sans-serif";
-  color: #000;
-  opacity: 0.4;
-  cursor: default;
-}
-.window-fix .window .windowHeader .replyTo {
-  margin-left: 0.36rem;
-}
-.window-fix .window .windowContent {
-  display: block;
-  width: 95%;
-  box-sizing: border-box;
-  margin: 0.71rem auto 0;
-  /*margin-left: 0.89rem;*/
-  background-color: #f0f0f0;
-  border-radius: 0.21rem;
-  overflow-y: hidden;
-  font-family: "PingFangSC-Regular", "sans-serif";
-  font-size: 1rem;
-}
-.window-fix .window .windowOperation {
-  float: right;
-  margin-top: 0.71rem;
-  margin-right: 0.89rem;
-}
-.window-fix .window .windowOperation .cancel {
-  margin-right: 2rem;
-  font-family: "PingFangSC-Regular", "sans-serif";
-  font-size: 0.93rem;
-  color: #333;
-  opacity: 0.5;
-  background-color: transparent;
-  cursor: pointer;
-}
-.window-fix .window .windowOperation .send {
-  width: 6.07rem;
-  height: 2rem;
-  border-radius: 1.43rem;
-  background-color: #fef22f;
-  font-family: "PingFangSC-Regular", "sans-serif";
-  font-size: 0.86rem;
-  color: #2b2b2b;
-  cursor: pointer;
-  text-align: center;
-}
-.share-mask {
-  position: fixed;
-  z-index: 999999;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.7);
-}
-.share-mask .mask-p {
-  padding-top: 3.57rem;
-  text-align: center;
-  font-size: 1.21rem;
-  color: #fff;
-  line-height: 1.93rem;
-}
-.share-mask .mask-icon {
-  position: absolute;
-  top: 1.57rem;
-  right: 2.29rem;
-  width: 2.82rem;
-  height: 2.57rem;
-  background: url("http://7u2spr.com2.z0.glb.qiniucdn.com/movie/share.png") center no-repeat;
-  background-size: contain;
 }
