--- a/public/services/src/app/views/activity/header/header.html
+++ b/public/services/src/app/views/activity/header/header.html
@@ -21,13 +21,13 @@
 		</div>
 	</div>
 	<ul class="tap clearfix">
-		<li class="new works-tap works-tap"  data-type="new">
+		<li class="new works-tap activity"  data-type="new">
 			<div class="new-tap clearfix">
 				<i class="new-icon"></i>
 				<span>最新</span>
 			</div>
 		</li>
-		<li class="hot activity" data-type="hot">
+		<li class="works-tap hot" data-type="hot">
 			<div class="hot-tap clearfix">
 				<i class="hot-icon"></i>
 				<span>热门</span>
