--- a/public/services/src/app/views/activity/works/works.html
+++ b/public/services/src/app/views/activity/works/works.html
@@ -4,7 +4,7 @@
 	</div>
 	<span class="nickname"><%= nickname %></span>
 </a>
-<a href="#detail/detail/<%= type %>/<%= reply_id %>" class="workSection">
+<a href="#detail/detail/<%= type %>/<%= reply_id %>/1" class="workSection">
 	<img src="<%= image_url %>" alt="作品" class="workPic">
 	<div class="workSectionFooter clearfix">
 		<div class="footerWrapper">
