--- a/public/services/src/app/views/activity/header/header.html
+++ b/public/services/src/app/views/activity/header/header.html
@@ -37,4 +37,7 @@
 	<a href="#upload/reply/0/1010" class="upload">
 		<img src="/images/upload1.png" alt="">
 	</a>
+	<div class="mongolia-layer hide">
+		<img src="/images/activityshare.png" alt="">
+	</div>
 </div>
