--- a/public/services/css/main.css
+++ b/public/services/css/main.css
@@ -1253,6 +1253,22 @@ body {
   display: block;
   width: 100%;
 }
+.activity-header .mongolia-layer {
+  position: fixed;
+  z-index: 1111111;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.4);
+}
+.activity-header .mongolia-layer img {
+  display: block;
+  width: 64%;
+  height: 15.36rem;
+  margin: 0 auto;
+  padding-top: 10rem;
+}
 
 
 .downloadContent {
@@ -1931,6 +1947,7 @@ body {
   background-color: #f9d161;
 }
 .header-portrait .user-info {
+  position: relative;
   /*width: 4.29rem;*/
   /*margin: 0 auto;*/
   /*text-align: center;*/
@@ -1954,6 +1971,19 @@ body {
   text-align: center;
   font-size: 1.07rem;
   color: rgba(0, 0, 0, 0.8);
+}
+.header-portrait .user-info .follow {
+  position: absolute;
+  top: 0rem;
+  left: 81%;
+  display: inline-block;
+  padding: 0.1rem 0.8rem;
+  border-radius: 1rem;
+  background-color: #FFFED7;
+  color: #666;
+}
+.header-portrait .user-info .following {
+  background-color: #E0DADA;
 }
 .header-nav {
   display: block;
