--- a/public/services/src/app/views/activity/header/activity-header.less
+++ b/public/services/src/app/views/activity/header/activity-header.less
@@ -129,4 +129,20 @@
 			width: 100%;
 		}
 	}
+	.mongolia-layer {
+		position: fixed;
+		z-index: 1111111;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+		background-color: rgba(0,0,0,0.4);
+		img {
+			display: block;
+			width: 64%;
+			height: 15.36rem;
+			margin: 0 auto;
+			padding-top: 10rem;
+		}
+	}
 }
