--- a/public/services/src/app/views/personal/header/header.less
+++ b/public/services/src/app/views/personal/header/header.less
@@ -12,6 +12,7 @@
     box-sizing: border-box;
     background-color: #f9d161;
     .user-info{
+        position: relative;
         /*width: 4.29rem;*/
         /*margin: 0 auto;*/
         /*text-align: center;*/
@@ -34,6 +35,19 @@
             text-align: center;
             font-size: 1.07rem;
             color: rgba(0,0,0,0.8);
+        }
+        .follow {
+            position: absolute;
+            top: 0rem;
+            left: 81%;
+            display: inline-block;
+            padding: 0.1rem 0.8rem;
+            border-radius: 1rem;
+            background-color: #FFFED7;
+            color: #666;
+        }        
+        .following {
+            background-color: #E0DADA;
         }
     }
 }
