--- a/public/services/src/app/views/activity/header/activity-header.less
+++ b/public/services/src/app/views/activity/header/activity-header.less
@@ -136,13 +136,13 @@
 		left: 0;
 		width: 100%;
 		height: 100%;
-		background-color: rgba(0,0,0,0.6);
+		background-color: rgba(0,0,0,0.4);
 		img {
 			display: block;
-			width: 80%;
-			/*height: 15.36rem;*/
+			width: 64%;
+			height: 15.36rem;
 			margin: 0 auto;
-			padding-top: 9rem;
+			padding-top: 10rem;
 		}
 	}
 }
