--- a/public/services/css/main.css
+++ b/public/services/css/main.css
@@ -2025,7 +2025,7 @@ body {
   width: 100%;
   background-color: #fff;
   border-radius: 0.21rem;
-  box-shadow: 3px 3px 5px 2px #d2d2d2;
+  box-shadow: 0 0.04rem  0 #e2e2e2;
 }
 .main-ask-section .ask-section .ask-section-main {
   display: block;
