--- a/public/services/src/app/views/personal/header/header.html
+++ b/public/services/src/app/views/personal/header/header.html
@@ -4,7 +4,7 @@
 			<img src="<%= avatar %>" alt="用户头像">
 		</div>
 		<span class="nickname"><%= nickname %></span>
-		<div class="follow <% is_follow? "following": "" %>" data-uid="<%= uid %>" isFollow="<%= is_follow %>"><% is_follow? "已关注": "关注" %>关注</div>
+		<!-- <div class="follow <% is_follow? "following": "" %>" data-uid="<%= uid %>" isFollow="<%= is_follow %>"><% is_follow? "已关注": "关注" %>关注</div> -->
 	</div>
 </div>
 <ul class="header-nav clearfix">
