--- a/public/main/src/app/templates/FooterView.html
+++ b/public/main/src/app/templates/FooterView.html
@@ -56,26 +56,26 @@
    <h2 class="title">请选择拒绝原因</h2>
    <div class="container">
      <div class="check-item" >
-       <input type="checkbox" class='checkbox'>
+       <input type="radio" value="1" name="sex" class='checkbox'>
        原图质量过低
      </div>
      <div class="check-item">
-       <input type="checkbox" class='checkbox'>
+       <input type="radio" value="2" name="sex" class='checkbox'>
        求P要求过高，无法完成
      </div>
      <div class="check-item">
-       <input type="checkbox" class='checkbox'>
+       <input type="radio" value="3" name="sex" class='checkbox'>
        求P描述不明确
      </div>
      <div class="check-item">
-       <input type="checkbox" class='checkbox'>
+       <input type="radio" value="4" name="sex" class='checkbox'>
        对此求P不敢兴趣
      </div>
      <div class="order-item">
        其他原因：
-       <input type="text" class="order-input">
+       <input type="text"  class="order-input">
      </div>
-     <input type="submit" value="提交" class="reject-submit">
+     <input type="submit" value="提交" class="reject-submit  submit-rejecxt">
      
    </div>
 </div>
