--- a/public/main/src/app/templates/homepage/HomeHeadView.html
+++ b/public/main/src/app/templates/homepage/HomeHeadView.html
@@ -26,6 +26,19 @@
 					<i><%= uped_count %></i>
 					<span>获赞</span>
 				</li>
+				<li class="personage-link">
+					<i><%= uped_count %></i>
+					<span>余额</span>
+				</li>
+				<li class="personage-link clickimgaa" >
+					<span style="    background: #D4D4D4;
+    line-height: 20px;
+    border-radius: 10px;
+    position: relative;">提现 <img class="clickimg hide" style="    position: absolute;
+    width: 200px;
+    height: 250px;
+    margin: 16px; "src="http://7u2spr.com1.z0.glb.clouddn.com/20160520-171757573ed645497fc.jpg" alt=""></span>
+				</li>
 			</ul>
 		</div>
 			<%  if(is_follow) {  %>
