--- a/public/services/src/app/views/activity/header/header.html
+++ b/public/services/src/app/views/activity/header/header.html
@@ -16,7 +16,7 @@
 				<li>参与方式：点击上传照片即可参与</li>
 			</ol>
 			<div class="deadline">
-				截止日期：2016.05.27
+				截止日期：2016.05.27（公众号搜“we图派“掌握活动实时动态）
 			</div>
 		</div>
 	</div>
