--- a/public/services/css/main.css
+++ b/public/services/css/main.css
@@ -500,137 +500,6 @@ body {
   }
 }
 
-.post-workShow {
-  width: 100%;
-  border-bottom: 0.36rem solid #F7F7F7;
-}
-.post-workShow .sectionHeader {
-  display: block;
-  width: 100%;
-  height: 3.93rem;
-  border-bottom: 0.04rem solid #DDDDDD;
-  background-color: #fff;
-}
-.post-workShow .sectionHeader .avatar {
-  float: left;
-  height: 1.79rem;
-  width: 1.79rem;
-  margin-left: 3%;
-  margin-top: 4%;
-  border-radius: 50%;
-  overflow: hidden;
-}
-.post-workShow .sectionHeader .userPortrait {
-  display: block;
-  width: 100%;
-}
-.post-workShow .sectionHeader .userName {
-  float: left;
-  max-width: 11rem;
-  height: 1.79rem;
-  line-height: 1.79rem;
-  overflow: hidden;
-  margin-left: 0.36rem;
-  margin-top: 4%;
-  font-size: 1rem;
-}
-.post-workShow .sectionHeader .pubdate {
-  float: right;
-  margin-top: 5%;
-  margin-right: 3%;
-  font-size: 0.9rem;
-  line-height: 1.79rem;
-  color: rgba(0, 0, 0, 0.3);
-}
-.post-workShow .sectionContent {
-  overflow: hidden;
-  display: block;
-  width: 100%;
-  /*max-height: 26.79rem;*/
-}
-.post-workShow .sectionContent img {
-  display: block;
-  width: 100%;
-}
-.post-workShow .sectionFooter {
-  width: 94%;
-  padding: 0 0 1.25rem;
-  margin: 0 auto;
-  color: #000;
-  box-sizing: border-box;
-  border-bottom: 1px solid #eaeaea;
-}
-.post-workShow .sectionFooter .workDesc {
-  display: block;
-  overflow: hidden;
-  max-height: 3.8rem;
-  margin-top: 0.71rem;
-  font-size: 1.07rem;
-  line-height: 1.3rem;
-  color: #000;
-}
-.post-workShow .sectionFooter .footerBottom {
-  margin-top: 1.46rem;
-  /*margin-right: 0.91rem;*/
-}
-.post-workShow .sectionFooter .footerBottom .share {
-  float: left;
-  width: 1.1rem;
-  height: 1.51rem;
-  background: url(/images/ic_share.png) no-repeat 0 center;
-  background-size: 100%;
-}
-.post-workShow .sectionFooter .footerBottom .ask-detail {
-  float: left;
-  margin-left: 1.5rem;
-  font-size: 0.86rem;
-  line-height: 1.51rem;
-  color: #000;
-}
-.post-workShow .sectionFooter .footerBottom .communicate {
-  float: right;
-  line-height: 1.51rem;
-}
-.post-workShow .sectionFooter .footerBottom .communicate .like-btn {
-  float: left;
-  cursor: pointer;
-}
-.post-workShow .sectionFooter .footerBottom .communicate .like-btn .icon-like-btn {
-  float: left;
-  width: 1.25rem;
-  height: 1.51rem;
-  background: url(/images/like1.png) no-repeat 0 center;
-  background-size: 100%;
-}
-.post-workShow .sectionFooter .footerBottom .communicate .like-btn .text-like-btn {
-  float: left;
-  font-size: 0.86rem;
-  color: #000;
-  margin-left: .5rem;
-}
-.post-workShow .sectionFooter .footerBottom .communicate .liked-icon .icon-like-btn {
-  background: url(/images/like.png) no-repeat 0 center;
-  background-size: 100%;
-}
-.post-workShow .sectionFooter .footerBottom .communicate .comment-btn {
-  float: left;
-  cursor: pointer;
-}
-.post-workShow .sectionFooter .footerBottom .communicate .comment-btn .icon-comment-btn {
-  float: left;
-  margin-left: 1.30rem;
-  width: 1.11rem;
-  height: 1.51rem;
-  background: url(/images/icon-comment-deepCol.png) no-repeat 0 center;
-  background-size: 100%;
-}
-.post-workShow .sectionFooter .footerBottom .communicate .comment-btn .text-comment-btn {
-  float: left;
-  font-size: 0.86rem;
-  color: #000;
-  margin-left: .5rem;
-}
-
 .menuMy-list-hide {
   position: absolute;
   top: -400%;
@@ -852,6 +721,49 @@ body {
   margin: auto;
   background: url(/images/icon-top.png) no-repeat 0 0;
   background-size: 100%;
+}
+
+.deleteComment-fix {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #000;
+  opacity: 0.8;
+}
+.deleteComment-fix .deleteComment {
+  position: absolute;
+  top: 16.64rem;
+  left: 50%;
+  transform: translate(-50%, 0);
+  width: 20rem;
+  height: 10.71rem;
+  box-sizing: border-box;
+  padding: 1.07rem 1.43rem;
+  background-color: #fff;
+  border: 1px solid #979797;
+  border-radius: 0.36rem;
+}
+.deleteComment-fix .deleteComment .alertText {
+  font-family: "PingFangSC-Regular", "sans-serif";
+  font-size: 1.29rem;
+  color: #000;
+}
+.deleteComment-fix .deleteComment .deleteOperation {
+  position: absolute;
+  bottom: 1.07rem;
+  right: 1.43rem;
+  font-size: 1.07rem;
+  font-family: "PingFangSC-Regular", "sans-serif";
+}
+.deleteComment-fix .deleteComment .deleteOperation .cancelDelete {
+  color: #000;
+  opacity: 0.6;
+}
+.deleteComment-fix .deleteComment .deleteOperation .confirmDelete {
+  margin-left: 2.57rem;
+  color: #fe5401;
 }
 
 .menuMy-list-hide {
@@ -1080,47 +992,135 @@ body {
   background-size: contain;
 }
 
-.deleteComment-fix {
-  position: fixed;
-  top: 0;
-  left: 0;
+.post-workShow {
   width: 100%;
-  height: 100%;
-  background-color: #000;
-  opacity: 0.8;
+  border-bottom: 0.36rem solid #F7F7F7;
 }
-.deleteComment-fix .deleteComment {
-  position: absolute;
-  top: 16.64rem;
-  left: 50%;
-  transform: translate(-50%, 0);
-  width: 20rem;
-  height: 10.71rem;
-  box-sizing: border-box;
-  padding: 1.07rem 1.43rem;
+.post-workShow .sectionHeader {
+  display: block;
+  width: 100%;
+  height: 3.93rem;
+  border-bottom: 0.04rem solid #DDDDDD;
   background-color: #fff;
-  border: 1px solid #979797;
-  border-radius: 0.36rem;
 }
-.deleteComment-fix .deleteComment .alertText {
-  font-family: "PingFangSC-Regular", "sans-serif";
-  font-size: 1.29rem;
+.post-workShow .sectionHeader .avatar {
+  float: left;
+  height: 1.79rem;
+  width: 1.79rem;
+  margin-left: 3%;
+  margin-top: 4%;
+  border-radius: 50%;
+  overflow: hidden;
+}
+.post-workShow .sectionHeader .userPortrait {
+  display: block;
+  width: 100%;
+}
+.post-workShow .sectionHeader .userName {
+  float: left;
+  max-width: 11rem;
+  height: 1.79rem;
+  line-height: 1.79rem;
+  overflow: hidden;
+  margin-left: 0.36rem;
+  margin-top: 4%;
+  font-size: 1rem;
+}
+.post-workShow .sectionHeader .pubdate {
+  float: right;
+  margin-top: 5%;
+  margin-right: 3%;
+  font-size: 0.9rem;
+  line-height: 1.79rem;
+  color: rgba(0, 0, 0, 0.3);
+}
+.post-workShow .sectionContent {
+  overflow: hidden;
+  display: block;
+  width: 100%;
+  /*max-height: 26.79rem;*/
+}
+.post-workShow .sectionContent img {
+  display: block;
+  width: 100%;
+}
+.post-workShow .sectionFooter {
+  width: 94%;
+  padding: 0 0 1.25rem;
+  margin: 0 auto;
   color: #000;
+  box-sizing: border-box;
+  border-bottom: 1px solid #eaeaea;
 }
-.deleteComment-fix .deleteComment .deleteOperation {
-  position: absolute;
-  bottom: 1.07rem;
-  right: 1.43rem;
+.post-workShow .sectionFooter .workDesc {
+  display: block;
+  overflow: hidden;
+  max-height: 3.8rem;
+  margin-top: 0.71rem;
   font-size: 1.07rem;
-  font-family: "PingFangSC-Regular", "sans-serif";
-}
-.deleteComment-fix .deleteComment .deleteOperation .cancelDelete {
+  line-height: 1.3rem;
   color: #000;
-  opacity: 0.6;
 }
-.deleteComment-fix .deleteComment .deleteOperation .confirmDelete {
-  margin-left: 2.57rem;
-  color: #fe5401;
+.post-workShow .sectionFooter .footerBottom {
+  margin-top: 1.46rem;
+  /*margin-right: 0.91rem;*/
+}
+.post-workShow .sectionFooter .footerBottom .share {
+  float: left;
+  width: 1.1rem;
+  height: 1.51rem;
+  background: url(/images/ic_share.png) no-repeat 0 center;
+  background-size: 100%;
+}
+.post-workShow .sectionFooter .footerBottom .ask-detail {
+  float: left;
+  margin-left: 1.5rem;
+  font-size: 0.86rem;
+  line-height: 1.51rem;
+  color: #000;
+}
+.post-workShow .sectionFooter .footerBottom .communicate {
+  float: right;
+  line-height: 1.51rem;
+}
+.post-workShow .sectionFooter .footerBottom .communicate .like-btn {
+  float: left;
+  cursor: pointer;
+}
+.post-workShow .sectionFooter .footerBottom .communicate .like-btn .icon-like-btn {
+  float: left;
+  width: 1.25rem;
+  height: 1.51rem;
+  background: url(/images/like1.png) no-repeat 0 center;
+  background-size: 100%;
+}
+.post-workShow .sectionFooter .footerBottom .communicate .like-btn .text-like-btn {
+  float: left;
+  font-size: 0.86rem;
+  color: #000;
+  margin-left: .5rem;
+}
+.post-workShow .sectionFooter .footerBottom .communicate .liked-icon .icon-like-btn {
+  background: url(/images/like.png) no-repeat 0 center;
+  background-size: 100%;
+}
+.post-workShow .sectionFooter .footerBottom .communicate .comment-btn {
+  float: left;
+  cursor: pointer;
+}
+.post-workShow .sectionFooter .footerBottom .communicate .comment-btn .icon-comment-btn {
+  float: left;
+  margin-left: 1.30rem;
+  width: 1.11rem;
+  height: 1.51rem;
+  background: url(/images/icon-comment-deepCol.png) no-repeat 0 center;
+  background-size: 100%;
+}
+.post-workShow .sectionFooter .footerBottom .communicate .comment-btn .text-comment-btn {
+  float: left;
+  font-size: 0.86rem;
+  color: #000;
+  margin-left: .5rem;
 }
 
 .activity-header {
@@ -1253,7 +1253,22 @@ body {
   display: block;
   width: 100%;
 }
-
+.activity-header .mongolia-layer {
+  position: fixed;
+  z-index: 1111111;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.6);
+}
+.activity-header .mongolia-layer img {
+  display: block;
+  width: 80%;
+  /*height: 15.36rem;*/
+  margin: 0 auto;
+  padding-top: 9rem;
+}
 
 .downloadContent {
   width: 100%;
