--- a/public/services/src/app/views/personal/processing/processing.less
+++ b/public/services/src/app/views/personal/processing/processing.less
@@ -10,6 +10,7 @@
         margin: 0 auto;
         /*margin-bottom: 0.71rem;*/
         background-color: #fff;
+        box-shadow: 0 2px 5px 1px #d2d2d2;
         .pic{
             float: left;
             width: 35%;
