--- a/public/services/src/app/views/hot/works/works.less
+++ b/public/services/src/app/views/hot/works/works.less
@@ -30,7 +30,7 @@
             float: left;
             width: 100%;
             border-radius: 0.29rem;
-            box-shadow: 0 0.04rem 0.04rem #e2e2e2;
+            box-shadow: 3px 3px 5px 2px #d2d2d2;
             overflow: hidden;
             .workPic{
                 overflow: hidden;
