--- a/public/services/src/app/views/original/index/ask-index.less
+++ b/public/services/src/app/views/original/index/ask-index.less
@@ -23,7 +23,7 @@
             width: 100%;
             /*margin: 0 1.5% 3%;*/
             border-radius: 0.29rem;
-            box-shadow: 0 0.04rem 0.04rem #e2e2e2;
+            box-shadow: 3px 3px 5px 2px #d2d2d2;
             .workSectionHeader{
                 display: block;
                 width: 100%;
