--- a/public/services/src/app/views/personal/original/personal-original.less
+++ b/public/services/src/app/views/personal/original/personal-original.less
@@ -9,7 +9,7 @@
             width: 100%;
             background-color: #fff;
             border-radius: 0.21rem;
-            box-shadow: 0 0.04rem  0 #e2e2e2;
+            box-shadow: 3px 3px 5px 2px #d2d2d2;
             .ask-section-main{
                 display: block;
                 .workPic{
