--- a/public/services/src/app/views/personal/works/personal-works.less
+++ b/public/services/src/app/views/personal/works/personal-works.less
@@ -8,6 +8,7 @@
     .workSection{
         display: block;
         width: 100%;
+        box-shadow: 3px 3px 5px 2px #d2d2d2;
         .workPic{
             width: 100%;
         }
