--- a/public/main/src/app/templates/homepage/HomeComplete.html
+++ b/public/main/src/app/templates/homepage/HomeComplete.html
@@ -8,7 +8,7 @@
 		</div>
 		<div class="status-section">
 			<div class="status">状态:</div>
-			<div class="state"><%= grade_reason %></div>
+			<div class="state"><%= status_text %></div>
 		</div>
 	</div>
 </div>
