--- a/public/main/src/app/templates/homepage/HomeHeadView.html
+++ b/public/main/src/app/templates/homepage/HomeHeadView.html
@@ -27,7 +27,7 @@
 					<span>获赞</span>
 				</li>
 				<li class="personage-link">
-					<i><%= uped_count %></i>
+					<i><%= balance %></i>
 					<span>余额</span>
 				</li>
 				<li class="personage-link clickimgaa" >
