--- a/public/services/src/app/views/original/index/index.html
+++ b/public/services/src/app/views/original/index/index.html
@@ -5,7 +5,7 @@
 		</div>
 		<span class="nickname"><%= nickname %></span>
 	</a>
-	<a href="#original/detail/<%= ask_id %>" class="workPic">
+	<a href="#detail/works/<%= ask_id %>" class="workPic">
 		<img src="<%= ask_image_url %>" alt="作品" class="old">
 	</a>
 	<span class="workDesc"><%= desc %></span>
