--- a/public/services/src/app/views/personal/original/original.html
+++ b/public/services/src/app/views/personal/original/original.html
@@ -1,4 +1,4 @@
-<a href="#original/detail/<%= ask_id %>" class="ask-section">
+<a href="#detail/works/<%= ask_id %>" class="ask-section">
 	<div  class="ask-section-main">
 		<div class="workPic">
 			<img src="<%= ask_image_url %>" alt="作品">
