--- a/public/services/src/app/views/personal/works/personal-works.less
+++ b/public/services/src/app/views/personal/works/personal-works.less
@@ -1,17 +1,22 @@
-    .myWork-pageSection{
-        float: left;
-        /*display: block;*/
-        width: 47%;
-        margin: 0 1.5% 3%;
-        background-color: #fff;
-    }
+.myWork-pageSection{
+    float: left;
+    /*display: block;*/
+    width: 47%;
+    margin: 0 1.5% 3%;
+    background-color: #fff;
     .workSection{
         display: block;
         width: 100%;
         box-shadow: 3px 3px 5px 2px #d2d2d2;
-        .workPic{
+        .pic-box {
+            overflow: hidden;
             width: 100%;
+            .workPic{
+                display: block;
+                width: 100%;
+            }
         }
+    
         .workSectionFooter{
             background-color: #fff;
             .footerWrapper{
@@ -73,3 +78,4 @@
             }
         }
     }
+}
