--- a/public/services/src/app/views/personal/works/works.html
+++ b/public/services/src/app/views/personal/works/works.html
@@ -1,5 +1,7 @@
-<a href="#original/detail/<%= ask_id %>" class="workSection">
-	<img src="<%= image_url %>" alt="作品" class="workPic">
+<a href="#detail/works/<%= ask_id %>" class="workSection">
+	<div class="pic-box">
+		<img src="<%= image_url %>" alt="作品" class="workPic">
+	</div>
 	<div class="workSectionFooter clearfix">
 		<div class="footerWrapper">
 			<div class="like">
