--- a/public/services/src/app/views/personal/processing/processing.html
+++ b/public/services/src/app/views/personal/processing/processing.html
@@ -1,6 +1,6 @@
 <div class="main-processing">
 	<div class="processing-block clearfix">
-		<a href="#detail/works//<%= ask_id %>" class="pic">
+		<a href="#detail/works/<%= ask_id %>" class="pic">
 		<% _.each(ask_uploads, function(img) { %>
 			<img src="<%= img.image_url %>" alt="作品">
 		<% } ) %>
